pingpong/LogOutput/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      volumes:
        - name: shared-logoutput
          emptyDir: {}
        - name: config-logoutput
          configMap:
            name: logoutput-configmap
      containers:
        - name: logoutput-write
          image: alago0/logoutput-write:7-28-2025-ver2
          volumeMounts:
            - name: shared-logoutput
              mountPath: /out/LogoutputShared
        - name: logoutput-read-api
          image: alago0/logoutput-read-api:11-15-2025-3
          volumeMounts:
            - name: shared-logoutput
              mountPath: /out/LogoutputShared
            - name: config-logoutput
              mountPath: /out/information.txt
              subPath: information.txt
            - name: config-logoutput
              mountPath: /out/appsettings.json
              subPath: appsettings.json
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 30
            httpGet:
              path: /healthz
              port: 80
